--- a/index.html
+++ b/index.html
@@ -6,6 +6,95 @@
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
   </head>
   <body>
+    <!-- Header -->
+    <header class="container-flex">
+      <img src="./resources/img/tea-cozy-logo.png" alt="Tea Cozy Logo">
+      <nav>
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#store">Featured Tea</a></span>
+        <span><a href="#locations">Locations</a></span>
+      </nav>
+    </header> <!-- Header -->
+
+    <!-- Main Content Container -->
+    <div class="main-content">
+
+      <!-- Mission Section -->
+
+      <div id="mission" class="container-flex">
+        <div class="content">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div> <!-- /Mission Section -->
+
+      <!-- Store Section -->
+
+      <div id="store">
+        <h2>Tea of the Month</h2>
+        <h4>What&#39;s Steeping at The Tea Cozy?</h4>
+        <div class="container-flex items">
+          <div class="item">
+            <img src="./resources/img/img-berryblitz.jpg" alt="Berry Blitz Tea"/>
+            <span>Fall Berry Blitz Tea</span>
+          </div>
+          <div class="item">
+            <img src="./resources/img/img-spiced-rum.jpg" alt="Spiced Rum Tea"/>
+            <span>Spiced Rum Tea</span>
+          </div>
+          <div class="item">
+            <img src="./resources/img/img-donut.jpg"/ alt="Seasonal Donuts">
+            <span>Seasonal Donuts</span>
+          </div>
+          <div class="item">
+            <img src="./resources/img/img-myrtle-ave.jpg" alt="Myrtle Ave Tea"/>
+            <span>Myrtle Ave Tea</span>
+          </div>
+          <div class="item">
+            <img src="./resources/img/img-bedford-bizarre.jpg" alt="Bedford Bizzare Tea"/>
+            <span>Bedford Bizarre Tea</span>
+          </div>
+        </div>
+      </div>   <!-- /Store Section -->
+
+      <!-- Locations Section -->
+
+      <div id="locations">
+        <h2>Locations</h2>
+        <div class="container-flex cls-locations">
+          <div class="location">
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="location">
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman&#39;s Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="location">
+            <h3>Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+          </div>
+        </div>
+      </div> <!-- /Locations Section -->
+    </div>  <!-- /Main Content Container -->
+
+    <!-- Contact Section -->
+    <div id="contact">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </div>   <!-- /Contact Section -->
+
+    <!-- Footer Section -->
+    <footer>
+      <h5>copyright The Tea Cozy 2017</h5>
+    </footer> <!-- /Footer Section -->
 
   </body>
 </html>
